incluindo mapa na rota pesquisas, ainda sem indicar a posição dos eleitores

--- a/dev/index.html
+++ b/dev/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNEqzwBl5f5ps0peIcrKHOwUfurxYJPdQ"></script>
   </body>
 </html>
