--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNEqzwBl5f5ps0peIcrKHOwUfurxYJPdQ"></script>
+    <!-- built files will be auto injected
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNEqzwBl5f5ps0peIcrKHOwUfurxYJPdQ"></script>-->
   </body>
 </html>
